syntax = "proto3";

// See README.md in this directory for a description of these.
package protocol;
option csharp_namespace = "Couchbase.Grpc.Protocol";
option java_package = "com.couchbase.grpc.sdk.protocol";
option go_package = "github.com/couchbaselabs/transactions-fit-performer/protocol";
option java_multiple_files = true;

import "sdk_commands.proto";
import "sdk_basic.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service PerformerSdkService {

    // Creates a connection between performer and couchbase server
    rpc createConnection (CreateConnectionRequest) returns (CreateConnectionResponse);

    rpc perfRun (PerfRunRequest) returns (stream PerfSingleSdkOpResult);

    // Tells the performer to exit.
    rpc exit (ExitRequest) returns (stream google.protobuf.Empty);
}

message CreateConnectionRequest {
    string clusterHostname=1;
    string clusterUsername=2;
    string clusterPassword=3;
    string bucketName=4;
}

// Returns the capabilities of the performer (or more specifically, the transactions-implementation-under-test by that
// performer)
//TODO: FIT equivalent is splitting this into two files, wait for that patchset to come through
message CreateConnectionResponse {
    // Defined https://hackmd.io/foGjnSSIQmqfks2lXwNp8w#Protocol-Versions
    // Must be "1.0" or "2.0", any other values will cause the driver to abort.
    string protocolVersion = 3;

    string clusterConnectionId=4;
}

message SdkCreateRequest {
    SdkCommand command = 1;
    string name = 2;
    string clusterConnectionId=3;
    int32 count = 4;
}

message SdkCommandResult {
    SdkException exception=1;
    ExternalException exceptionCause=2;
    repeated string log=3;
}

// "HorizontalScaling" is an abstraction over there been many forms of concurrency.  The core idea is that the driver
// is trying to increase the parallelism, and it's up to the performer to choose a suitable platform-dependent way to
// do this.
// For some languages that will be threads.  For some, a larger pool of concurrent Future/Promises.  For some,
// forking a new process.
// Whatever is produced (thread, new process), it should run the provided transaction in a tight loop.  So essentially
// PerfRunHorizontalScaling is the number of concurrent sdk operations taking place.
message PerfRunHorizontalScaling {
    // Performer will run these transactions, in a loop.
    repeated SdkCreateRequest sdkCommand = 1;
}

message PerfRunRequest {
    // Optional, allows a custom Cluster connection to be used
    string clusterConnectionId = 1;

    // See PerfRunHorizontalScaling for a discussion of this.  Broadly, it's the number of concurrent transactions
    // required.
    repeated PerfRunHorizontalScaling horizontalScaling = 2;

    // Performer will run until this much time has elapsed.
    int32 runForSeconds = 3;
}

message PerfSingleSdkOpResult {
    // Implementations should not provide the logs field here, to conserve memory & bandwidth
    SdkCommandResult results = 1;
    google.protobuf.Timestamp initiated = 3;
    google.protobuf.Timestamp finished = 4;
}

message ExitRequest {
    string reason = 1;
    int32 exitCode = 2;
}